redactor minor ui styling fix @ dark mode

--- a/css/styl/2.0.styl
+++ b/css/styl/2.0.styl
@@ -253,6 +253,11 @@ h2
     border-radius 0.25rem !important
     border-bottom-color transparent !important
 
+.redactor-styles
+    code
+        background-color var(--background-color-blockquote) !important
+        color var(--text-color-stronger) !important
+
 .collapsible
   margin-bottom: 2rem
 
